--- a/rock-paper-scissors-master/rock-paper-scissors-master/index.html
+++ b/rock-paper-scissors-master/rock-paper-scissors-master/index.html
@@ -20,18 +20,29 @@
       <strong class="points"> 12</strong>
     </div>
   </header>
-  <section class="game">
-    testtestetest
-  </section>
 
-<main>
-  
+  <main>
+    <section class="game">
+      <button class="paperbtn">
+       <img src="./images/icon-paper.svg" alt="paper-icon">
+      </button>
+      <button class="scissorsbtn">
+       <img src="./images/icon-scissors.svg" alt="scissors-icon">
+      </button>
+      <button class="rockbtn">
+        <img src="./images/icon-rock.svg" alt="rock-icon">
+       </button>
+    </section>
+   
 </main>
-
-  
+<div class="rules">
+ <button class="rulesbtn">RULES</button>
+ </div>
+<footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Filip Zawada (silentmower)</a>.
+    Coded by <a href="https://github.com/silentmower">Filip Zawada (silentmower)</a>.
   </div>
+</footer>
 </body>
 </html>
