added fight section

--- a/rock-paper-scissors-master/rock-paper-scissors-master/index.html
+++ b/rock-paper-scissors-master/rock-paper-scissors-master/index.html
@@ -22,16 +22,40 @@
   </header>
 
   <main>
-    <section class="game">
+
+    <!-- start menu -->
+    <!-- <section class="game">
       <button class="paperbtn">
-       <img src="./images/icon-paper.svg" alt="paper-icon">
+        <div class="btnimg">
+          <img src="./images/icon-paper.svg" alt="paper-icon">
+       </div>
       </button>
       <button class="scissorsbtn">
-       <img src="./images/icon-scissors.svg" alt="scissors-icon">
+        <div class="btnimg">
+          <img src="./images/icon-scissors.svg" alt="scissors-icon">
+        </div>
       </button>
       <button class="rockbtn">
-        <img src="./images/icon-rock.svg" alt="rock-icon">
+        <div class="btnimg">
+          <img src="./images/icon-rock.svg" alt="rock-icon">
+        </div>
        </button>
+    </section> -->
+
+  <!--  fight  -->
+    <section class="fight">
+     <div class="picked">
+        <span>YOU PICKED</span>
+        <button class="paperbtn">
+        <div class="btnimg">
+          <img src="./images/icon-paper.svg" alt="paper-icon">
+       </div>
+      </button>
+      </div>
+     <div class="picked">
+      <span>THE HOUSE PICKED</span>
+      <div class="placeholder"></div>
+    </div>
     </section>
    
 </main>
