--- a/rock-paper-scissors-master/rock-paper-scissors-master/index.html
+++ b/rock-paper-scissors-master/rock-paper-scissors-master/index.html
@@ -17,33 +17,33 @@
       <span class="score-title">
         SCORE
       </span>
-      <strong class="points"> 12</strong>
+      <strong class="points"> 12 </strong>
     </div>
   </header>
 
   <main>
 
     <!-- start menu -->
-    <!-- <section class="game">
-      <button class="paperbtn">
+    <section class="game">
+      <button class="paperbtn" data-pick="paper">
         <div class="btnimg">
           <img src="./images/icon-paper.svg" alt="paper-icon">
        </div>
       </button>
-      <button class="scissorsbtn">
+      <button class="scissorsbtn" data-pick="scissors">
         <div class="btnimg">
           <img src="./images/icon-scissors.svg" alt="scissors-icon">
         </div>
       </button>
-      <button class="rockbtn">
+      <button class="rockbtn" data-pick="rock">
         <div class="btnimg">
           <img src="./images/icon-rock.svg" alt="rock-icon">
         </div>
        </button>
-    </section> -->
+    </section>
 
   <!--  fight  -->
-    <section class="fight">
+    <section class="fight hidden">
      <div class="picked">
         <span>YOU PICKED</span>
         <button class="paperbtn">
@@ -68,5 +68,6 @@
     Coded by <a href="https://github.com/silentmower">Filip Zawada (silentmower)</a>.
   </div>
 </footer>
+<script src="main.js"></script>
 </body>
 </html>
